# Vacation-Qt

./: CMakeLists.txt  README.md
02_QtEvent/: 02_QtEvent.pro.user.52650f7.22  mylabel.cpp  mylabel.h  widget.cpp  widget.h  widget.ui
02_Qtsource/: mainwindow.cpp  mainwindow.ui
03_QPainter/: widget.cpp  widget.h  widget.ui
03_Qdialog/: 03_Qdialog.pro.user.52650f7.22  mainwindow.cpp  mainwindow.ui
04_layout/: mainwindow.ui
05_qt_control/: widget.cpp  widget.ui
06_TreeWidget/: widget.cpp  widget.ui
07_TableWidget/: 07_TableWidget.pro.user.52650f7.22  widget.cpp  widget.ui
08_othercontrol/: widget.cpp  widget.ui
0_smallwidget/: smallwidget.cpp  smallwidget.h  smallwidget.ui  widget.cpp  widget.ui
1_Qmainwindow/: 1_Qmainwindow.pro.user.52650f7.22  mainwindow.cpp
build-02_QtEvent-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-02_QtEvent-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-02_Qtsource-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-02_Qtsource-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp
build-03_QPainter-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-03_QPainter-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-03_Qdialog-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-03_Qdialog-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp
build-04_layout-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-04_layout-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp
build-05_qt_control-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-05_qt_control-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-06_TreeWidget-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-06_TreeWidget-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-07_TableWidget-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-07_TableWidget-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-08_othercontrol-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_widget.h
build-08_othercontrol-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-0_smallwidget-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_smallwidget.h  ui_widget.h
build-0_smallwidget-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_smallwidget.cpp  moc_widget.cpp
build-1_Qmainwindow-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-1_Qmainwindow-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_mainwindow.cpp
build-first-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-first-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_mypushbutton.cpp  moc_widget.cpp
build-third-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-third-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
build-two-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-two-Desktop_Qt_5_14_2_MinGW_32_bit-Debug/debug/: moc_widget.cpp
first/: first.pro  main.cpp  mypushbutton.cpp  mypushbutton.h  widget.cpp
two/: student.cpp  student.h  teacher.cpp  teacher.h  two.pro  widget.cpp  widget.h
